Avoid invisible code highlight for bold text in dark mode (#728)
* Set code syntax highlight color

Avoids invisible bold text in dark mode.

* Add CSS custom property for colorcd ..

* Reuse a CSS color custom property

---------

--- a/bridgetown-website/frontend/styles/global.css
+++ b/bridgetown-website/frontend/styles/global.css
@@ -27,6 +27,7 @@
   --color-syntax-beige: #8A786E;
   --color-syntax-charcoal: #67717E;
   --color-syntax-steel-teal: #568684;
+  --color-syntax-mid-blue: #4b83d4;
   --color-syntax-rose-vale: #b25658;
 
   --body-background: white;
